--- a/app/assets/stylesheets/tools.scss
+++ b/app/assets/stylesheets/tools.scss
@@ -8,6 +8,10 @@ $gh-green: #367c2b;
 .search-wrapper {
   width: 100%;
   padding: 0 1%;
+  margin-bottom: 5px;
+  h1 {
+    margin: 0;
+  }
   #search-form {
     display: inline-block;
     width: calc(100% - 72px);
@@ -23,4 +27,9 @@ $gh-green: #367c2b;
     margin: 0;
     height: 39px;
   }
+}
+
+.new-tool {
+  margin-left: 1%;
+  margin: -20px 0 0 1%;
 }
