--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -75,6 +75,6 @@
 
 <br>
 
-<%= link_to 'New Tool', new_tool_path, class: "success button", id: "gh-success" %>
+<%= link_to 'New Tool', new_tool_path, class: "success button new-tool", id: "gh-success" %>
 
 </div>
