--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -18,14 +18,22 @@ $gh-green: #367c2b;
   margin: auto;
 }
 .form {
+  border-radius: 10px;
   position: relative;
   z-index: 1;
   background: #FFFFFF;
   max-width: 360px;
   margin: 0 auto 100px;
-  padding: 45px;
+  padding: 35px 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+
+  h4 {
+    color: $gh-green;
+    margin-bottom: 1rem;
+    font-size: 1.5625rem;
+  }
+
 }
 .form .remember-me {
   text-align: left;
@@ -76,15 +84,4 @@ $gh-green: #367c2b;
 }
 .form .gardener-register {
   display: none;
-}
-
-body {
-  background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
