--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -19,11 +19,9 @@ $gh-green: #367c2b;
 }
 .form {
   border-radius: 10px;
-  position: relative;
-  z-index: 1;
   background: #FFFFFF;
   max-width: 360px;
-  margin: 0 auto 100px;
+  margin: 8% auto 100px;
   padding: 35px 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
@@ -52,6 +50,16 @@ $gh-green: #367c2b;
   box-sizing: border-box;
   font-size: 14px;
 }
+.form label {
+  text-align: left;
+  margin-left: 5px;
+}
+.form #tool_image {
+  margin: 0;
+}
+.form .progress {
+  margin: 2px 0 15px;
+}
 .form .button {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
@@ -59,6 +67,7 @@ $gh-green: #367c2b;
   background: #4CAF50;
   width: 100%;
   border: 0;
+  margin: 0 0 .5rem 0;
   padding: 15px;
   color: #FFFFFF;
   font-size: 14px;
