--- a/app/views/tools/edit.html.erb
+++ b/app/views/tools/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Tool</h1>
+<% provide(:title, 'Edit Tool') %>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @tool %> |
-<%= link_to 'Back', tools_path %>
+<%= render 'form', title: "Edit Tool" %>
