--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Tool</h1>
+<% provide(:title, 'New Tool') %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', tools_path, class: "success button", id: "gh-success"%>
+<%= render 'form', title: "New Tool" %>
