--- a/app/views/tools/_form.html.erb
+++ b/app/views/tools/_form.html.erb
@@ -20,8 +20,10 @@
       </div>
 
       <div class="field">
-        <%= f.label :image %>
-        <%= f.file_field :image %>
+        <div class="image-upload-wrap">
+          <%= f.label :image %>
+          <%= f.file_field :image %>
+        </div>
       </div>
 
       <div class="field">
