--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -52,10 +52,17 @@ $gh-green: #367c2b;
 }
 .form label {
   text-align: left;
-  margin-left: 5px;
+  padding: 5px 0 0 15px;
+  color: #A9A9A9;
 }
 .form #tool_image {
   margin: 0;
+  padding: 5px 15px 10px;
+  background: none;
+}
+.image-upload-wrap {
+  background: #f2f2f2;
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
 }
 .form .progress {
   margin: 2px 0 15px;
