--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -101,3 +101,6 @@ $gh-green: #367c2b;
 .form .gardener-register {
   display: none;
 }
+.form .gardener-login #gardener_password {
+  margin: 0;
+}
