--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,23 +1,19 @@
 <div id="cards-page">
-<p id="notice"><%= notice %></p>
-
-
 
 <div class="search-wrapper">
 
   <h1 class="static-text">The Toolshed</h1>
+  <% if !@tools.present? %>
+    <p>No results for search: <span><%= params[:search] %></span>.</p>
+  <% end %>
+    <p id="notice"><%= notice %></p>
 
   <%= form_tag(tools_path, :method => "get", id: "search-form") do %>
     <%= text_field_tag :search, params[:search], placeholder: "Search for tools" %>
     <%= button_tag "Search", class: "success button search-button", id: "gh-success" %>
   <% end %>
 
-  <% if @tools.present? %>
     <%= link_to 'Reset', tools_path, class: "success button search-button", id: "gh-success" %>
-  <% else %>
-    <p>There are no tools containing the term(s) <%= params[:search] %>.</p>
-    <%= link_to 'Reset', tools_path, class: "success button", id: "gh-success" %>
-  <% end %>
 </div>
 
 
@@ -62,7 +58,7 @@
 
           <% if tool.gardener == current_gardener %>
             <%= link_to 'Edit', edit_tool_path(tool), class: "success button", id: "gh-success" %>
-            <%= link_to 'Destroy', tool, method: :delete, data: { confirm: 'Are you sure?' }, class: "success button", id: "gh-success" %>
+            <%= link_to 'Destroy', tool, method: :delete, class: "success button", id: "gh-success" %>
           <% end %>
         </div>
       </div>
