--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -13,7 +13,7 @@
     <%= button_tag "Search", class: "success button search-button", id: "gh-success" %>
   <% end %>
 
-    <%= link_to 'Reset', tools_path, class: "success button search-button", id: "gh-success" %>
+    <%= link_to 'Reset', tools_path, class: "success button search-button reset-button", id: "gh-success" %>
 </div>
 
 
