--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,3 +84,19 @@ body {
   color:   white;
   display: none;
 }
+
+#hidden-id {
+  display: none;
+}
+
+#requested-tool {
+  font-weight: bold;
+}
+
+#start_date_form {
+  margin: 0;
+}
+
+#end_date_form {
+  margin-bottom: 25px;
+}
