Formatted edit and new request forms to match consistent styling

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -1,6 +1,6 @@
 <div>
   <div class="form">
-    <h4> New request for: </h4>
+    <h4> <%= title %> for: </h4>
     <h4 id="requested-tool"><%= @request.tool.name %></h4>
 
     <%= form_for(@request) do |f| %>
