--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Update Your Request</h1>
+<% provide(:title, 'Edit Request') %>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @request, class: "button" %> |
-<%= link_to 'Back', tools_path, class: "button" %>
+<%= render 'form', title: "Edit Request" %>
