Re-formatted request form buttons. Changed text on new and edit tool form buttons.

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -34,10 +34,10 @@
         <%= f.text_field :notes, placeholder: "Notes" %>
       </div>
       <div class="actions">
-        <%= button_tag "Submit", class: "success button search-button", id: "gh-success" %>
+        <%= button_tag "Submit", class: "success button search-button" %>
       </div>
     <% end %>
 
-    <%= link_to 'Back', tools_path, class: "success button search-button", id: "gh-success" %>
+    <%= link_to 'Back', tools_path, class: "success button search-button" %>
   </div>
 </div>
