--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, 'New Tool') %>
 
-<%= render 'form', title: "New Tool" %>
+<%= render 'form', title: "New Tool", , button_text: "Create Tool" %>
