--- a/app/views/tools/_form.html.erb
+++ b/app/views/tools/_form.html.erb
@@ -31,7 +31,7 @@
       </div>
 
       <div class="actions">
-        <%= f.button "Create Tool", class: "success button" %>
+        <%= f.button button_text, class: "success button" %>
       </div>
     <% end %>
     <%= link_to 'Back', tools_path, class: "success button" %>
