--- a/app/views/tools/edit.html.erb
+++ b/app/views/tools/edit.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, 'Edit Tool') %>
 
-<%= render 'form', title: "Edit Tool" %>
+<%= render 'form', title: "Edit Tool" , button_text: "Save Tool" %>
