--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,10 +4,10 @@
     <h2 class="static-text">A Ruby on Rails App</h2>
     <h4 class="static-text">Technologies include:</h4>
     <ul>
-      <li><a href="https://www.ruby-lang.org/">Ruby 2.2.4</a></li>
-      <li><a href="http://rubyonrails.org/">Rails 5.0</a></li>
-      <li><a href="http://www.postgresql.org/">PostgreSQL 9.5</a></li>
-      <li><a href="#">Foundation 6</a></li>
+      <li><a href="https://www.ruby-lang.org/" target='_blank'>Ruby 2.2.4</a></li>
+      <li><a href="http://rubyonrails.org/" target='_blank'>Rails 5.0</a></li>
+      <li><a href="http://www.postgresql.org/" target='_blank'>PostgreSQL 9.5</a></li>
+      <li><a href="http://foundation.zurb.com/sites.html" target='_blank'>Foundation 6</a></li>
     </ul>
   </div>
 </div>
