--- a/app/assets/stylesheets/requests.scss
+++ b/app/assets/stylesheets/requests.scss
@@ -2,43 +2,22 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.request-accordion {
-  width: 98%;
-  margin: 0 1%;
-  .accordion-title {
-    width: 100%;
-    padding: 5px 0;
-    .request-accordion-head {
-      width: 100%;
-      div {
-        display: inline-block;
-        width: 19%;
-        margin: 0 auto;
-        text-align: center;
-        color: black;
-        font-weight: bold;
-        vertical-align: middle;
-      }
-    }
-  }
-  .accordion-content {
-    padding: 0;
-    div {
-      font-size: 12px;
-      display: inline-block;
-      width: 19%;
-      margin: 0 auto;
-      text-align: center;
-      color: black;
-      vertical-align: middle;
-    }
-  }
-}
-
 #request-table-wrap {
   table {
     width: 98%;
     margin: 0 1%;
-    border-radius: 10px;
+    border-radius: 8px;
+    border-collapse: separate !important;
+    border-spacing: 0;
+    border: solid #ccc 1px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+
+    th:first-child {
+      border-top-left-radius: 6px;
+    }
+
+    th:last-child {
+      border-top-right-radius: 6px;
+    }
   }
 }
