Added styling to requests tables, and media queries for responsive font sizes.

--- a/app/assets/stylesheets/requests.scss
+++ b/app/assets/stylesheets/requests.scss
@@ -3,9 +3,17 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #request-table-wrap {
+  h1 {
+    margin: 0 0 1rem 1%;
+  }
+
+  h2 {
+    margin-left: 1%;
+  }
+
   table {
     width: 98%;
-    margin: 0 1%;
+    margin: 0 1% 20px;
     border-radius: 8px;
     border-collapse: separate !important;
     border-spacing: 0;
@@ -19,5 +27,37 @@
     th:last-child {
       border-top-right-radius: 6px;
     }
+
+    th, td {
+      text-align: center;
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+
+    thead {
+      @media (max-width: 650px) {
+        font-size: 14px;
+      }
+    }
+
+    tbody {
+      font-size: 14px;
+      @media (max-width: 650px) {
+        font-size: 12px;
+      }
+    }
+
+    thead, tbody {
+      @media (max-width: 550px) {
+        font-size: 10px;
+      }
+      @media (max-width: 350px) {
+        font-size: 8px;
+      }
+      @media (max-width: 220px) {
+        font-size: 6px;
+      }
+    }
+
   }
 }
