--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,12 +1,12 @@
   <p id="notice"><%= notice %></p>
 <div id="request-table-wrap">
-  <h1 class="static-text">YOUR REQUESTS</h1>
+  <h1 class="static-text">Tool Requests</h1>
 
   <h2 class="static-text">Tools You've Requested:</h2>
   <table>
     <thead>
       <tr>
-        <th>Tool You Want</th>
+        <th>Tool Name</th>
         <th>Requested Dates</th>
         <th>Notes</th>
         <th>Status</th>
@@ -21,7 +21,7 @@
           <% if tool.id == request.tool_id %>
             <%- if request.gardener == current_gardener %>
               <tr>
-                <td><%= tool.name %></td>
+                <td><%= tool.name.titleize %></td>
                 <td><%= request.start_date.to_s + ' until ' + request.end_date.to_s  %></td>
                 <td><%= request.notes %></td>
                 <td><%= request.status %></td>
@@ -35,7 +35,7 @@
     </tbody>
   </table>
 
-  <h2 class="static-text">Requests Made for Your Tools:</h2>
+  <h2 class="static-text">Requests for Your Tools:</h2>
 
   <table>
     <thead>
@@ -44,7 +44,7 @@
         <th>Requested Dates</th>
         <th>Notes</th>
         <th>Status</th>
-        <th>Requestor</th>
+        <th>Requester</th>
       </tr>
     </thead>
 
@@ -56,11 +56,11 @@
               <% @gardeners.each do |gardener| %>
                 <% if request.gardener_id == gardener.id %>
                   <tr>
-                    <td><%= tool.name %></td>
+                    <td><%= tool.name.titleize %></td>
                     <td><%= request.start_date.to_s + ' until ' + request.end_date.to_s  %></td>
                     <td><%= request.notes %></td>
                     <% if request.status == "pending" %>
-                      <td><%= link_to 'Approve', "/requests/#{request.id}/set_approved" %> <span> OR </span>
+                      <td><%= link_to 'Approve', "/requests/#{request.id}/set_approved" %> <span> | </span>
                       <%= link_to 'Deny', "/requests/#{request.id}/set_denied" %></td>
                     <% else %>
                       <td><%= request.status %></td>
