--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -75,4 +75,7 @@
       <% end %>
     </tbody>
   </table>
+
+  <%= link_to 'Back to Tools', tools_path, class: "success button new-tool", id: "gh-success" %>
+
 </div>
