--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -76,6 +76,6 @@
     </tbody>
   </table>
 
-  <%= link_to 'Back to Tools', tools_path, class: "success button new-tool", id: "gh-success" %>
+  <%= link_to 'Back to Tools', tools_path, class: "success button back-to-tools", id: "gh-success" %>
 
 </div>
