--- a/app/assets/stylesheets/_static.scss
+++ b/app/assets/stylesheets/_static.scss
@@ -22,63 +22,76 @@ $gh-green: #367c2b;
 }
 
 #marquee {
-  margin: 150px 150px 100px 100px;
-  // background-color: rgba(1,177,30,.2);
-  // box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-
-#marquee > h1 {
-  font-size: 7.5em;
-}
-
-#marquee > h3 {
-  font-size: 2.5em;
-}
-
-#marquee > h2 {
-  font-size: 4em;
-}
-
-#marquee > h4 {
-  font-size: 2.5em;
+  margin: 130px auto 80px;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: rgba(0,0,0,.5);
+  h1 {
+    font-size: 7.5em;
+  }
+  h2 {
+    font-size: 4em;
+  }
+  h3 {
+    font-size: 2.5em;
+  }
+  h4 {
+    font-size: 2.5em;
+  }
+  ul li {
+    list-style: none;
+    a {
+      color: $gh-yellow;
+      font-size: 1.8em;
+    }
+  }
+  @media (max-width: 890px) {
+    margin: 40px auto 150px;
+    h1 {
+      font-size: 3.5em;
+    }
+    h2, h3 {
+      font-size: 2em;
+    }
+    h4 {
+      font-size: 1.5em;
+    }
+    ul li a {
+      font-size: 1.2 em;
+    }
+  }
+  @media (max-width: 580px) {
+    margin: 40px auto 200px;
+    h1 {
+      font-size: 2.5em;
+    }
+    h2, h3 {
+      font-size: 1.5em;
+    }
+    h4 {
+      font-size: 1.5em;
+    }
+    ul li a {
+      font-size: 1 em;
+    }
+  }
+  @media (max-width: 450px) {
+    margin: 40px auto 200px;
+    h1 {
+      font-size: 2em;
+    }
+    h2, h3 {
+      font-size: 1em;
+    }
+    h4 {
+      font-size: 1em;
+    }
+    ul li a {
+      font-size: 1 em;
+    }
+  }
 }
 
 .static-text {
   color: $gh-yellow;
-}
-
-#marquee > ul > li > a {
-  color: $gh-yellow;
-  font-size: 1.8em;
-}
-
-#marquee > ul > li {
-  list-style: none;
-}
-
-@media (max-width: 890px) {
-  #marquee {
-    margin: 40px 40px 20px 20px;
-  }
-
-  #marquee > h1 {
-    font-size: 3.5em;
-  }
-
-  #marquee > h3 {
-    font-size: 2em;
-  }
-
-  #marquee > h2 {
-    font-size: 2em;
-  }
-
-  #marquee > h4 {
-    font-size: 1.5em;
-  }
-
-  #marquee > ul > li > a {
-    font-size: 1.2em;
-  }
-
 }
