Tweaked h4 spacing on request form.

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -31,6 +31,9 @@ $gh-green: #367c2b;
     margin-bottom: 1rem;
     font-size: 1.5625rem;
   }
+  .request-h4 {
+    margin-bottom: 5px;
+  }
 
 }
 .form .remember-me {
