--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div class="form">
-    <h4> <%= title %> for: </h4>
-    <h4 id="requested-tool"><%= @request.tool.name %></h4>
+    <h4 class="request-h4"> <%= title %> for: </h4>
+    <h4 class="request-h4" id="requested-tool"><%= @request.tool.name.titleize %></h4>
 
     <%= form_for(@request) do |f| %>
 
