--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -38,6 +38,7 @@
       </div>
     <% end %>
 
-    <%= link_to 'Back', tools_path, class: "success button search-button" %>
+    <%= link_to 'Back to Tools', tools_path, class: "success button search-button" %>
+    <%= link_to 'Back to Requests', requests_path, class: "success button search-button" %>
   </div>
 </div>
