--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -46,8 +46,7 @@
 
     <h4 class="cancel-account">Cancel my account</h4>
 
-    <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "success button" %>
+    <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "alert button" %>
 
-    <%= button_to "Back", :back, class: "success button" %>
   </div>
 </div>
