--- a/app/assets/stylesheets/_static.scss
+++ b/app/assets/stylesheets/_static.scss
@@ -46,12 +46,13 @@ $gh-green: #367c2b;
     }
   }
   @media (max-width: 890px) {
-    margin: 40px auto 150px;
+    margin: 40px auto 50px;
+    padding: 10px;
     h1 {
-      font-size: 3.5em;
+      font-size: 3em;
     }
     h2, h3 {
-      font-size: 2em;
+      font-size: 1.75em;
     }
     h4 {
       font-size: 1.5em;
@@ -60,7 +61,7 @@ $gh-green: #367c2b;
       font-size: 1.2 em;
     }
   }
-  @media (max-width: 580px) {
+  @media (max-width: 550px) {
     margin: 40px auto 200px;
     h1 {
       font-size: 2.5em;
@@ -76,7 +77,7 @@ $gh-green: #367c2b;
     }
   }
   @media (max-width: 450px) {
-    margin: 40px auto 200px;
+    margin: 40px auto 150px;
     h1 {
       font-size: 2em;
     }
