--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -48,6 +48,7 @@ $gh-green: #367c2b;
   text-align: left;
   #gardener_remember_me {
     width: 12px;
+    background: #fff;
   }
 }
 .form input {
