--- a/app/assets/stylesheets/tools.scss
+++ b/app/assets/stylesheets/tools.scss
@@ -7,8 +7,7 @@ $gh-green: #367c2b;
 
 .search-wrapper {
   width: 100%;
-  padding: 0 1%;
-  margin-bottom: 5px;
+  margin: 0 1% 5px;
   h1 {
     margin: 0;
     display: inline-block;
@@ -16,7 +15,7 @@ $gh-green: #367c2b;
   #search-form {
 
     display: inline-block;
-    width: 100%;
+    width: 98%;
     margin: 0;
     #search {
       display: inline-block;
