--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -22,7 +22,12 @@
 
   <% @tools.each do |tool| %>
 
-  <div class="accordion card" data-accordion data-allow-all-closed="true">
+  <% if tool.gardener == current_gardener %>
+    <div class="accordion card owner-card" data-accordion data-allow-all-closed="true">
+  <% else %>
+    <div class="accordion card" data-accordion data-allow-all-closed="true">
+  <% end %>
+
     <div class="accordion-item" data-accordion-item>
       <a href="" class="accordion-title">
         <div>
