--- a/app/assets/stylesheets/tools.scss
+++ b/app/assets/stylesheets/tools.scss
@@ -7,15 +7,15 @@ $gh-green: #367c2b;
 
 .search-wrapper {
   width: 100%;
-  margin: 0 1% 5px;
+  padding: 0 1% 5px;
   h1 {
     margin: 0;
     display: inline-block;
   }
   #search-form {
 
-    display: inline-block;
-    width: 98%;
+    // display: inline-block;
+    width: 100%;
     margin: 0;
     #search {
       display: inline-block;
